add styles for an element that is under drag

--- a/facia-tool/public/css/style.css
+++ b/facia-tool/public/css/style.css
@@ -1522,6 +1522,10 @@ button {
 /* CONFIG EDITOR */
 /*****************************************/
 
+.underDrag {
+    background: red;
+}
+
 .cnf-fronts {
     margin-top: 10px;
 }
